--- a/password-generator/public/index.html
+++ b/password-generator/public/index.html
@@ -30,6 +30,10 @@
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6506203240622280"
       crossorigin="anonymous"
     ></script>
+    <meta
+      name="google-site-verification"
+      content="20FoZh_I0BQYtIHDwYkpmjYBUOM4npiBFv9mb7F8A9M"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
